--- a/java/index.html
+++ b/java/index.html
@@ -35,12 +35,12 @@
         <div class="m-auto my-10 md:my-10 md:m-auto">
             <!-- Título principal -->
             <h1 class="text-bold text-4xl">
-                Bem-Vindo ao Hello World Go da ToolBox Playground
+                Bem-Vindo ao Hello World Java da ToolBox Playground
             </h1>
         </div>
         <div class="max-w-sm m-auto mt-20">
             <!-- Imagem com classe de animação -->
-            <img src='/static/toolbox-playground.png' class="animate-bounce">
+            <img src='https://raw.githubusercontent.com/toolbox-playground/hello-world-languages/main/img/toolbox-playground.png' class="animate-bounce">
         </div>
     </div>
   </body>
